After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734266 - vp8dec: fails when input format changes
vp8dec: fails when input format changes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other All
: Normal normal
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-05 08:43 UTC by Jose Antonio Santos Cadenas
Modified: 2014-09-02 06:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vp8dec: Reset output and input states when changing format (1.05 KB, patch)
2014-08-05 08:44 UTC, Jose Antonio Santos Cadenas
committed Details | Review

Description Jose Antonio Santos Cadenas 2014-08-05 08:43:24 UTC
Codec prints this error

ERROR:gstvp8dec.c:432:open_codec: assertion failed: (dec->output_state == NULL)

The problem is that output_state is not reset when format is changed. Attached is a patch that solves this issue.
Comment 1 Jose Antonio Santos Cadenas 2014-08-05 08:44:03 UTC
Created attachment 282509 [details] [review]
vp8dec: Reset output and input states when changing format
Comment 2 Thiago Sousa Santos 2014-09-02 04:03:26 UTC
Thanks for the patch! It has been pushed to master along with a new unit test to prevent it from happening again and also applying the same fix for vp9dec that was actually crashing instead of asserting.

commit 8bee49c85e51bc35123c6a4700e489441038dcf2
Author: Thiago Santos <thiagoss@osg.samsung.com>
Date:   Tue Sep 2 00:55:17 2014 -0300

    vp9dec: Fix segfault when a new caps is received
    
    Remember to unref the output caps when a new caps event is received
    as it should generate a new one based on the new caps.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=734266

commit 0430ea87a3ab0767ca85fbbc27d1f68b41b73153
Author: Thiago Santos <thiagoss@osg.samsung.com>
Date:   Tue Sep 2 00:54:35 2014 -0300

    tests: vp8dec: add test for caps renegotiation
    
    Check that vp8dec can properly accept a new caps when upstream
    changes it
    
    https://bugzilla.gnome.org/show_bug.cgi?id=734266

commit f22b91dad52ae609f76cfda1b9ad6b064722273a
Author: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Date:   Tue Aug 5 10:34:39 2014 +0200

    vp8dec: Reset output and input states when changing format
    
    https://bugzilla.gnome.org/show_bug.cgi?id=734266
Comment 3 Sebastian Dröge (slomo) 2014-09-02 06:14:06 UTC
Related bug #719359